--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
   box-sizing: border-box;
 }
 body {
-  background: black;
+  background: #171717;
 }
-h1 {
+h1,
+h6 {
   color: white;
 }
 .circular {
@@ -20,15 +21,15 @@ h1 {
 }
 .menu {
   position: relative;
-  width: 550px;
-  height: 100px;
+  width: 580px;
+  height: 120px;
   display: flex;
   justify-content: center;
 }
 .menu.active {
   position: relative;
   width: 550px;
-  height: 400px;
+  height: 100px;
   display: flex;
   justify-content: center;
   display: flex;
@@ -37,17 +38,20 @@ h1 {
 }
 
 .para.active {
+  height: 10px;
   display: none;
+  transition: height 5s;
+  transition-delay: 2s;
 }
 
 .menu li {
   position: absolute;
   left: 0;
   list-style: none;
-  transform-origin: 280px;
+  transform-origin: 270px;
   transition: 0.5s;
   transition-delay: calc(0.1s * var(--i));
-  transform: rotate(0deg) translateX(230px) translateY(10px);
+  transform: rotate(0deg) translateX(230px) translateY(3px);
 }
 .menu.active li {
   transform: rotate(calc(360deg / 9 * var(--i)));
@@ -55,16 +59,18 @@ h1 {
 
 .menu li a {
   display: flex;
+  color: white;
+  font-size: 20px;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 80px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
-
+  text-decoration: none;
   transform: rotate(calc(360deg / -9 * var(--i)));
   transition: 0.5s;
   background: black;
-  border: 2px solid #232427;
+  border: 2px solid #1f45b8;
   box-shadow: 2px 2px 2px 2px rgb(0 0 0 / 50%),
     -2px -2px 2px 1px rgb(108 108 108 / 20%),
     inset 2px 2px 2px 2px rgb(0 0 0 / 50%),
@@ -94,6 +100,7 @@ h1 {
   color: #fff;
   border-radius: 10px;
   padding: 8px 30px;
+  border: 1px solid white;
   text-shadow: 0 0 10px #ff00ad, 0 0 25px #ff00ad, 0 0 30px #ff00ad,
     0 0 35px #ff00ad;
 }
